# mutual_aid_connect

backend/: .env  .gitignore  Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20241231_134115_create_tables.rs
backend/migrations/: 20241231024414_init_schema.sql  20241231024901_seed_data.sql
backend/src/: config.rs  db.rs  lib.rs  main.rs
backend/src/entities/: campaign.rs
backend/src/handlers/: campaign.rs
backend/src/models/: campaign.rs  mod.rs  user.rs
backend/src/routes/: campaign.rs
backend/src/services/: campaign.rs  mod.rs
backend/tests/api/: campaign_test.rs  mod.rs
backend/tests/common/: fixtures.rs
frontend/: .gitignore  pubspec.yaml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/: Podfile
frontend/ios/Runner/: AppDelegate.swift  Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/core/config/: api_config.dart
frontend/lib/core/layout/: main_navigation_layout.dart  navigation_providers.dart
frontend/lib/core/styles/: map_style.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/core/themes/: app_theme.dart
frontend/lib/features/campaigns/data/providers/: campaign_repository_provider.dart
frontend/lib/features/campaigns/data/repositories/: campaign_repository.dart
frontend/lib/features/campaigns/domain/: campaign.dart
frontend/lib/features/campaigns/domain/models/: campaign.dart
frontend/lib/features/campaigns/presentation/providers/: campaign_details_provider.dart  campaign_form_provider.dart  campaign_provider.dart  campaign_provider.g.dart  donation_providers.dart
frontend/lib/features/campaigns/presentation/screens/: campaign_details_screen.dart  campaign_list_screen.dart  campaign_map_screen.dart  create_campaign_screen.dart  donation_screen.dart
frontend/lib/features/campaigns/presentation/widgets/: campaign_card.dart  (+9 more)
frontend/lib/models/: campaign.dart
frontend/lib/views/: campaigns_list_view.dart  main_layout.dart  map_view.dart
frontend/test/: widget_test.dart
(+1 files in other folders)
