[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
dotenv = "0.15"
sea-orm = { version = "1.1.3", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "mock",
    "macros",
    "with-uuid",
    "with-rust_decimal",
    "with-json",
    "with-time",
] }
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32"

[lib]
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"